--- a/app/src/main/res/drawable/button_main_color_selector.xml
+++ b/app/src/main/res/drawable/button_main_color_selector.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_main_color"/>
+            <solid android:color="@color/main_color"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/secondary_main_color"/>
+            <solid android:color="@color/pressed_main_button_color"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
