--- a/app/src/main/res/drawable/button_secondary_color_selector.xml
+++ b/app/src/main/res/drawable/button_secondary_color_selector.xml
@@ -2,13 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_button_color"/>
+            <solid android:color="@color/items_color"/>
+            <stroke android:width="1dp" android:color="@color/stroke_color"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/secondary_button_color"/>
+            <solid android:color="@color/pressed_secondary_button_color"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
