--- a/app/src/main/res/drawable/edit_text_selector.xml
+++ b/app/src/main/res/drawable/edit_text_selector.xml
@@ -2,15 +2,15 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:state_focused="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_edit_color"/>
-            <stroke android:color="@color/secondary_edit_color" android:width="1dp"/>
+            <solid android:color="@color/items_color"/>
+            <stroke android:color="@color/stroke_color" android:width="1dp"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
     <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_edit_color"/>
-            <stroke android:color="@color/primary_main_color" android:width="1dp"/>
+            <solid android:color="@color/items_color"/>
+            <stroke android:color="@color/main_color" android:width="1dp"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
