--- a/app/src/main/res/drawable/icon.xml
+++ b/app/src/main/res/drawable/icon.xml
@@ -4,11 +4,8 @@
     android:viewportWidth="140"
     android:viewportHeight="140">
   <path
-      android:pathData="M71,75m-47,0a47,47 0,1 1,94 0a47,47 0,1 1,-94 0"
-      android:fillColor="#D9D9D9"/>
-  <path
       android:pathData="M20,0L120,0A20,20 0,0 1,140 20L140,120A20,20 0,0 1,120 140L20,140A20,20 0,0 1,0 120L0,20A20,20 0,0 1,20 0z"
-      android:fillColor="@color/primary_main_color"/>
+      android:fillColor="@color/main_color"/>
   <path
       android:pathData="M66.3,82.93C67.57,81.86 69.46,82.03 70.53,83.3L93.35,110.49C94.41,111.76 94.25,113.65 92.98,114.72V114.72C91.71,115.78 89.82,115.62 88.75,114.35L65.93,87.15C64.87,85.89 65.03,83.99 66.3,82.93V82.93Z"
       android:fillColor="#ffffff"/>
