--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MyParty" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="colorAccent">@color/primary_main_color</item>
+        <item name="colorAccent">@color/main_color</item>
     </style>
-    
+
     <style name="button_style" parent="Widget.AppCompat.Button.Borderless">
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
         <item name="android:paddingVertical">14dp</item>
         <item name="android:paddingHorizontal">8dp</item>
         <item name="textAllCaps">false</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/secondary_text_color</item>
         <item name="android:textSize">16sp</item>
         <item name="android:gravity">center</item>
     </style>
@@ -21,15 +21,22 @@
         <item name="android:paddingVertical">14dp</item>
         <item name="android:paddingHorizontal">18dp</item>
         <item name="textAllCaps">false</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/secondary_text_color</item>
         <item name="android:textSize">16sp</item>
-        <item name="hintTextColor">@color/secondary_edit_color</item>
+        <item name="android:textColorHint">@color/hint_color</item>
     </style>
 
     <style name="text_main_style">
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/main_text_color</item>
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="text_big_style">
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textColor">@color/main_text_color</item>
+        <item name="android:textSize">30sp</item>
     </style>
 </resources>
