--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,15 +2,18 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main_color">#CB2F67</color>
 
-    <color name="background">#282828</color>
+    <color name="main_text_color">#282828</color>
+    <color name="secondary_text_color">#3F3F3F</color>
+    <color name="hint_color">#717171</color>
 
-    <color name="primary_edit_color">#3E3E3E</color>
-    <color name="secondary_edit_color">#646464</color>
+    <color name="background">#F3F3F3</color>
 
-    <color name="primary_button_color">#3E3E3E</color>
-    <color name="secondary_button_color">#363636</color>
+    <color name="items_color">#FFFFFF</color>
+    <color name="stroke_color">#D8D8D8</color>
 
-    <color name="primary_main_color">#CB2F67</color>
-    <color name="secondary_main_color">#AE1F53</color>
+    <color name="pressed_secondary_button_color">#D1D1D1</color>
+
+    <color name="pressed_main_button_color">#AE1F53</color>
 </resources>
