--- a/app/src/main/res/drawable/button_secondary_color_selector.xml
+++ b/app/src/main/res/drawable/button_secondary_color_selector.xml
@@ -10,6 +10,7 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/pressed_secondary_button_color"/>
+            <stroke android:width="1dp" android:color="@color/stroke_color"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
