--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,6 +4,10 @@
         <item name="colorAccent">@color/main_color</item>
     </style>
 
+    <style name="BottomNavigationView">
+        <item name="fontFamily">@font/rubik_medium</item>
+    </style>
+
     <style name="button_style" parent="Widget.AppCompat.Button.Borderless">
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
@@ -23,7 +27,7 @@
         <item name="textAllCaps">false</item>
         <item name="android:textColor">@color/secondary_text_color</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColorHint">@color/hint_color</item>
+        <item name="hintTextColor">@color/hint_color</item>
     </style>
 
     <style name="text_main_style">
@@ -38,5 +42,12 @@
         <item name="android:includeFontPadding">false</item>
         <item name="android:textColor">@color/main_text_color</item>
         <item name="android:textSize">30sp</item>
+    </style>
+
+    <style name="helper_text_medium_12_style">
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textColor">@color/main_color</item>
+        <item name="android:textSize">12sp</item>
     </style>
 </resources>
