--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Base.Theme.MyParty" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorAccent">@color/main_color</item>
+        <item name="colorAccent">@color/white</item>
+    </style>
+
+    <style name="BottomNavigationView">
+        <item name="fontFamily">@font/rubik_medium</item>
     </style>
 
     <style name="button_main_style" parent="Widget.AppCompat.Button.Borderless">
@@ -33,7 +37,7 @@
         <item name="textAllCaps">false</item>
         <item name="android:textColor">@color/secondary_text_color</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColorHint">@color/hint_color</item>
+        <item name="hintTextColor">@color/hint_color</item>
     </style>
 
     <style name="text_main_style">
@@ -43,10 +47,38 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="text_big_style">
+    <style name="text_bold_30_style">
         <item name="fontFamily">@font/rubik_bold</item>
         <item name="android:includeFontPadding">false</item>
         <item name="android:textColor">@color/main_text_color</item>
         <item name="android:textSize">30sp</item>
+    </style>
+
+    <style name="text_bold_16_style">
+        <item name="fontFamily">@font/rubik_bold</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textColor">@color/main_text_color</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="text_medium_16_style">
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textColor">@color/main_text_color</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="text_medium_12_style">
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textColor">@color/main_text_color</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="helper_text_medium_12_style">
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textColor">@color/main_color</item>
+        <item name="android:textSize">12sp</item>
     </style>
 </resources>
