--- a/app/src/main/res/layout/main_recycler_view_item.xml
+++ b/app/src/main/res/layout/main_recycler_view_item.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/button_secondary_color_selector">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/icon"
@@ -15,38 +15,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <ImageButton
+        android:id="@+id/star"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/empty_star"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
+        android:background="@null"
+        android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/image" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/age"
         style="@style/text_medium_12_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         android:text="14+"
         android:textColor="@color/secondary_text_color"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="@+id/image"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        app:layout_constraintTop_toBottomOf="@+id/image">
 
         <TextView
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Новый год"
@@ -60,6 +63,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Эйфория"
@@ -67,6 +71,7 @@
                 android:textColor="@color/secondary_text_color"/>
 
             <ImageView
+                android:id="@+id/verify"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/tick"
@@ -76,6 +81,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="от 160 ₽"
@@ -84,13 +90,15 @@
             android:textColor="@color/main_color"/>
 
         <TextView
+            android:id="@+id/place"
+            style="@style/text_medium_12_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ангар"
-            style="@style/text_medium_12_style"
-            android:textColor="@color/hint_color"/>
+            android:textColor="@color/hint_color" />
 
         <TextView
+            android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1 февраля, 19:00"
