Вывод отформатированной информации о вечеринках в MainFragment, но без картинки. А так же создание Singleton для хранения SupabaseClient

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,6 +92,7 @@
             android:layout_height="wrap_content"
             style="@style/helper_text_medium_12_style"
             android:text="Неверный логин или пароль"
+            android:visibility="invisible"
             android:layout_marginTop="14dp"/>
 
     </LinearLayout>
