--- a/app/src/main/res/layout/main_recycler_view_item.xml
+++ b/app/src/main/res/layout/main_recycler_view_item.xml
@@ -72,7 +72,7 @@
 
             <ImageView
                 android:id="@+id/verify"
-                android:layout_width="wrap_content"
+                android:layout_width="11.7dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/tick"
                 android:layout_gravity="center_vertical"
