--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -46,6 +46,17 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="button_secondary_style_small" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:minHeight">0dp</item>
+        <item name="android:paddingVertical">6dp</item>
+        <item name="android:paddingHorizontal">6dp</item>
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/secondary_text_color</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="edit_text_style">
         <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:includeFontPadding">false</item>
@@ -97,6 +108,13 @@
         <item name="android:includeFontPadding">false</item>
         <item name="android:textColor">@color/main_text_color</item>
         <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="text_medium_10_secondary_style">
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textColor">@color/secondary_text_color</item>
+        <item name="android:textSize">10sp</item>
     </style>
 
     <style name="helper_text_medium_12_style">
