Создан SplashScreen с логикой проверки авторизованного пользователя

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
 
     <color name="background">#F3F3F3</color>
 
+    <color name="background_splash_screen">#CB2F67</color>
+
     <color name="items_color">#FFFFFF</color>
     <color name="stroke_color">#D8D8D8</color>
 
