--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,6 +10,8 @@
 
     <color name="background">#282828</color>
 
+    <color name="background_splash_screen">#282828</color>
+
     <color name="items_color">#2F2F2F</color>
     <color name="stroke_color">#3E3E3E</color>
 
