--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,12 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MyParty" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorAccent">@color/main_color</item>
+        <item name="android:statusBarColor">@color/background_splash_screen</item>
+    </style>
+
+    <style name="SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_splashscreen</item>
+        <item name="android:statusBarColor">@color/background_splash_screen</item>
     </style>
 
     <style name="bottom_navigation">
