--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MyParty" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorAccent">@color/main_color</item>
-        <item name="android:statusBarColor">@color/background_splash_screen</item>
+        <item name="android:statusBarColor">@color/background</item>
+        <item name="android:navigationBarColor">@color/items_color</item>
     </style>
 
     <style name="SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">
