--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,9 @@
 <resources xmlns:tools="http://schemas.andr oid.com/tools">
     <style name="Base.Theme.MyParty" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/main_color</item>
-        <item name="android:statusBarColor">@color/background_splash_screen</item>
+        <item name="android:statusBarColor">@color/background</item>
+        <item name="android:navigationBarColor">@color/items_color</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">
